[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
target-version = ['py36']
skip-string-normalization = true

[tool.poetry]
name = "env-asm"
packages = [
  { include = "env_asm" }
]
version = "0.0.0"
description = "Run a process with environment variables fetched from AWS Secrets Manager"
authors = ["Jyve Engineering"]
classifiers = [
  "Private :: Do Not Upload"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "=19.3b0"
boto3 = "=1.9.243"
flake8 = "=3.7.8"
flake8-bugbear = "=19.8.0"
flake8-comprehensions = "=2.2.0"
flake8-import-order = "=0.18.1"
flake8-logging-format = "=0.6.0"
flake8-mutable = "=1.2.0"
packaging = "19.2"
pip = "*"
pre-commit = "1.18.3"
pytest = "=5.2.1"
pytest-cov = "=2.8.1"
python-magic = "=0.4.15"
requests = "^2.22.0"
Sphinx = "=1.6.6"
sphinx-rtd-theme = "=0.2.4"
temple = "*"

[[tool.poetry.source]]
name = "jyve"
url = "https://pypi.fury.io/jyve"
